--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+
+.settings/
+.metadata/
+.project
+.classpath
+
+.idea/
+*.iml
